chore: Lược bỏ những code cũ

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
 #* Minio
-access_key=""
-secret_key=""
-bucket_name=""
-host=""
-port=""
+ACCESS_KEY=""
+SECRET_KEY=""
+BUCKET_NAME=""
+MINIO_HOST=""
+MINIO_PORT=""
 
 #* Postgres
 DB_NAME=""
