--- a/.env.example
+++ b/.env.example
@@ -6,8 +6,8 @@ MINIO_HOST=""
 MINIO_PORT=""
 
 #* Postgres
-DB_NAME=""
-DB_USER=""
-DB_PASSWORD=""
-DB_HOST=""
-DB_PORT=""
+POSTGRES_DB=""
+POSTGRES_USER=""
+POSTGRES_PASSWORD=""
+POSTGRES_HOST=""
+POSTGRES_PORT=""
