docs: Cải thiện readme

--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,13 @@
 #* Minio
-ACCESS_KEY=""
-SECRET_KEY=""
-BUCKET_NAME=""
-MINIO_HOST=""
-MINIO_PORT=""
+ACCESS_KEY="your_access_key"
+SECRET_KEY="your_secret_key"
+BUCKET_NAME="your_bucket_name"
+MINIO_HOST="localhost"
+MINIO_PORT="9000"
 
 #* Postgres
-POSTGRES_DB=""
-POSTGRES_USER=""
-POSTGRES_PASSWORD=""
-POSTGRES_HOST=""
-POSTGRES_PORT=""
+POSTGRES_DB="postgres"
+POSTGRES_USER="postgres"
+POSTGRES_PASSWORD="postgres"
+POSTGRES_HOST="localhost"
+POSTGRES_PORT="5432"
