--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,9 @@ sentence-transformers = "4.1.0"
 Pillow = "10.4.0"
 httptools = ">=0.6.3"
 hf_xet = "1.1.1"
+aiofiles = "^24.1.0"
+einops = "^0.8.1"
+timm = "^1.0.15"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8"
